fix width too large

--- a/DeployModel/code/visualize/css/index.css
+++ b/DeployModel/code/visualize/css/index.css
@@ -1,5 +1,5 @@
 .graph {
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
 }
 
